# DynamicForms

./: .actrc  .coveragerc  .gitignore  DynamicForms.docx  Jenkinsfile  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  README_JS_DEV.rst  index.html  manage.py  package-lock.json  package.json  publish.py  pyproject.toml  requirements.txt  requirements_test.txt  requirements_test_functional.txt  setup.py  sync_version.py  tox.ini  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: Python tests.yml  black.yml  check_code.yml  check_doc.yml  incremental-cover-check.yml  incremental-coverage-check.yml  jest_tests.yml  vitest_tests.yml
doc/: .gitignore  Makefile  conf.py  index.md  index.rst  settings.md
doc/archive/: make.bat
doc/documents/: contribute.rst  getting-started.md  intro.rst  settings.rst
docs/: getting-started.md  index.md
docs/.docs_archive/: conf.py
docs/.vitepress/: config.mts
docs/reference/: dialog-size.md  hiding_titlebar_and_navbar.md  index.md  layout.md
dynamicforms/: __init__.py  action.py  apps.py  buttons.py  context_processors.py  dynamicforms_migration.py  dynamicforms_migration_mixin.py  exceptions.py  field_component_definition.py  fields.py  filters.py  int_choice_enum.py  mixins.py  models.py  models_fields.py  pagination.py  preupload_files.py  progress.py  renderers.py  routers.py  serializers.py  settings.py  struct.py  urls.py  utils.py  views.py  viewsets.py
dynamicforms/df-vue-components/: README.md  package.json  vue.config.js
dynamicforms/docs/: README.md  package.json
dynamicforms/docs_vitepress/: package.json
dynamicforms/fields/: __init__.py  mixins.py
dynamicforms/js/: actions.py  conditions.py
dynamicforms/mixins/: __init__.py  action.py  allow_tags.py  boolean_field.py  color_field.py  conditional_visibility.py  (+17 more)
dynamicforms_legacy/: __init__.py  action.py  apps.py  dynamicforms_migration_mixin.py  fields.py  filters.py  pagination.py  renderers.py  serializers.py  settings.py  urls.py  viewsets.py
dynamicforms_temp_moved/: action.py  filters.py  progress.py  struct.py
examples/: apps.py  enum_field.py  forms.py  models.py  models_utils.py  recurrence_utils.py  rest.py  urls.py  views.py
functional_tests/: tests.py
public/: index.html
setup/: settings.py  settings_bs3.py  settings_jqueryui.py  urls.py  wsgi.py
tests/: request_sync.py
ts-reference/: index.html  package-lock.json  package.json  tsconfig.vitest.json  vite.config.ts
vue/: dynamicforms.js  dynamicforms.ts  main.js  main.ts  routes.js  routes.ts
(+1065 files in other folders)
